--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-precompress",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "description": "Precompress files to gzip and brotli and serve them automatically",
   "author": {
     "name": "frenchrabbit"
@@ -31,7 +31,9 @@
     "jest": "^25.3.0",
     "nuxt": "^2.12.2",
     "prettier": "^2.0.4",
-    "puppeteer": "^2.1.1",
+    "puppeteer": "^2.1.1"
+  },
+  "peerDependencies": {
     "serve-static": "^1.14.1"
   },
   "jest": {
