--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-precompress",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Precompress files to gzip and brotli and serve them automatically",
   "author": {
     "name": "frenchrabbit"
@@ -28,10 +28,10 @@
     "format": "prettier './**/*.{js,ts,json,vue}' --write"
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "jest": "^25.3.0",
     "nuxt": "^2.12.2",
-    "prettier": "^2.0.4",
-    "puppeteer": "^3.0.0"
+    "prettier": "^2.0.4"
   },
   "peerDependencies": {
     "serve-static": "^1.14.1"
