--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-precompress",
-  "version": "0.4.1",
+  "version": "0.4.9",
   "description": "Precompress files to gzip and brotli and serve them automatically",
   "author": {
     "name": "frenchrabbit"
@@ -21,29 +21,26 @@
   "repository": "https://github.com/frenchrabbit/nuxt-precompress",
   "scripts": {
     "dev": "nuxt test/fixture",
+    "build": "nuxt build test/fixture",
     "test": "jest",
     "test:unit": "jest --testRegex \"/test/unit/(.+)\\.test\\.js$\"",
-    "test:system": "jest --testRegex \"/test/system/(.+)\\.test\\.js$\"",
+    "test:system": "jest --testRegex \"/test/system/(.+)\\.test\\.js$\" --detectOpenHandles",
     "test:coverage": "yarn test --coverage",
     "format": "prettier './**/*.{js,ts,json,vue}' --write"
   },
   "devDependencies": {
     "axios": "^0.19.2",
-    "jest": "^25.3.0",
-    "nuxt": "^2.12.2",
-    "prettier": "^2.0.4"
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.2.1",
+    "jest": "^26.2.1",
+    "nuxt": "^2.14.0",
+    "prettier": "^2.0.5"
   },
   "peerDependencies": {
     "serve-static": "^1.14.1"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "collectCoverageFrom": [
-      "lib/**/*.{js,jsx}"
-    ]
-  },
   "dependencies": {
-    "compression-webpack-plugin": "^3.1.0",
-    "consola": "^2.3.2"
+    "compression-webpack-plugin": "^4.0.0",
+    "consola": "^2.14.0"
   }
 }
