--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,7 @@
           { "type": "refactor", "release": "patch" },
           { "type": "perf", "release": "patch" },
           { "type": "style", "release": "patch" },
+          { "type": "fix", "release": "patch" },
           { "type": "feat", "release": "minor" },
           { "type": "update", "release": "minor" },
           { "breaking": true, "release": "major" }
