--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "main": "lib/module.js",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
     "axios": "^0.21.0",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "jest": "^26.4.0",
     "nuxt": "^2.14.1",
     "prettier": "^2.0.4"
